# Noita-Minidump

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
minidump/: init.lua  mod.xml
packaging/: CMakeLists.txt
src/: CMakeLists.txt  dump_communication.hpp  main.cpp  minidump_injected.cpp  noita_dumper.cpp
